Created a weather api tool

--- a/tools/Untitled1.ipynb
+++ b/tools/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
    "id": "1d09b7d6-cf86-495c-a603-84e22a61517f",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,15 @@
     "from dotenv import load_dotenv\n",
     "from langchain_groq import ChatGroq\n",
     "from langchain_ollama import OllamaLLM\n",
-    "from langchain_core.messages import HumanMessage"
+    "from langchain_core.messages import HumanMessage\n",
+    "from typing import Annotated\n",
+    "from langchain_core.tools import InjectedToolArg\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "ffb48a97-bcb4-44db-83b8-78a97a564889",
    "metadata": {},
    "outputs": [],
@@ -173,7 +176,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter a value 5\n"
@@ -199,7 +202,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Prompt your query here mulitply 88 with 77\n",
@@ -312,9 +315,219 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0cc6806e-5503-4a30-94ae-d345523424e6",
+   "metadata": {},
+   "source": [
+    "## Currency convertor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a4903675-3ed8-4024-bf79-93ce63ba7864",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "url = f'https://v6.exchangerate-api.com/v6/bb8909cf12d80e88629ff763/pair/USD/INR'\n",
+    "\n",
+    "response = requests.get(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8eba1b4c-16aa-49c2-add1-c421bf687c2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'result': 'success',\n",
+       " 'documentation': 'https://www.exchangerate-api.com/docs',\n",
+       " 'terms_of_use': 'https://www.exchangerate-api.com/terms',\n",
+       " 'time_last_update_unix': 1763856001,\n",
+       " 'time_last_update_utc': 'Sun, 23 Nov 2025 00:00:01 +0000',\n",
+       " 'time_next_update_unix': 1763942401,\n",
+       " 'time_next_update_utc': 'Mon, 24 Nov 2025 00:00:01 +0000',\n",
+       " 'base_code': 'USD',\n",
+       " 'target_code': 'INR',\n",
+       " 'conversion_rate': 89.4539}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "81ded958-f00a-4ee2-8e04-00676222553c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@tool\n",
+    "def get_conversion_rate(base_currency:str, target_currency:str) -> float:\n",
+    "    \"\"\"This tool is going to give the conversion rate between base currency and target currency\"\"\"\n",
+    "    url = f'https://v6.exchangerate-api.com/v6/bb8909cf12d80e88629ff763/pair/{base_currency}/{target_currency}'\n",
+    "    response = requests.get(url)\n",
+    "    return response.json()\n",
+    "\n",
+    "@tool\n",
+    "def convert(base_currency:int,conversion_rate:Annotated[float, InjectedToolArg]) -> float:\n",
+    "    \"\"\"convert the base currency to the target currency\"\"\"\n",
+    "    return base_currency * conversion_rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "532d2227-6c07-475e-af22-017b1d91712e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'result': 'success',\n",
+       " 'documentation': 'https://www.exchangerate-api.com/docs',\n",
+       " 'terms_of_use': 'https://www.exchangerate-api.com/terms',\n",
+       " 'time_last_update_unix': 1763856001,\n",
+       " 'time_last_update_utc': 'Sun, 23 Nov 2025 00:00:01 +0000',\n",
+       " 'time_next_update_unix': 1763942401,\n",
+       " 'time_next_update_utc': 'Mon, 24 Nov 2025 00:00:01 +0000',\n",
+       " 'base_code': 'USD',\n",
+       " 'target_code': 'INR',\n",
+       " 'conversion_rate': 89.4539}"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_conversion_rate.invoke({\"base_currency\":\"USD\",\"target_currency\":\"INR\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "4c273a62-09fa-4844-b46a-41feeb221ba7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8945.390000000001"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convert.invoke({\"base_currency\":100,\"conversion_rate\":89.4539})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "0502fe3e-7ffe-4315-9515-65c2f9c2d5ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm_with_tools = llm.bind_tools([get_conversion_rate,convert])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "13797141-b13c-49ee-b88a-f0ca13c02112",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "messges = [HumanMessage(\"can you convert 10 usd to inr based on the coversion rate\")]\n",
+    "ai_msg = llm_with_tools.invoke(messges)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "c938df19-da9d-4b3b-aacb-c9bdeb54cfbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'get_conversion_rate',\n",
+       "  'args': {'base_currency': 'USD', 'target_currency': 'INR'},\n",
+       "  'id': '23nqzybst',\n",
+       "  'type': 'tool_call'},\n",
+       " {'name': 'convert',\n",
+       "  'args': {'base_currency': 10},\n",
+       "  'id': '8xsgextv9',\n",
+       "  'type': 'tool_call'}]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ai_msg.tool_calls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "5b19cc20-b015-4c56-9c0c-32b6dd99d7fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conversion_rate = 0\n",
+    "for msg in ai_msg.tool_calls:\n",
+    "    if msg['name'] == \"get_conversion_rate\":\n",
+    "        conversion_data = get_conversion_rate.invoke(msg)\n",
+    "        conversion_rate = json.loads(conversion_data.content)['conversion_rate']\n",
+    "    else:\n",
+    "        msg['args']['conversion_rate'] = float(conversion_rate)\n",
+    "        \n",
+    "        result = convert.invoke(msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "4ab1e9c4-1157-4126-bc34-0cc213ce9120",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'894.539'"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.content"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2f2938c-1d77-4de9-92b9-64c65e0d7562",
+   "id": "ce15cf5a-028a-46d5-b109-3b8c7d3586bf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -322,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4903675-3ed8-4024-bf79-93ce63ba7864",
+   "id": "49fe5664-6222-42c1-9879-213d28a01298",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -330,7 +543,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "langchain_env",
    "language": "python",
    "name": "python3"
   },
